--- a/index.html
+++ b/index.html
@@ -11,28 +11,23 @@
     </head>
     <body>
         <header>
-            <div class="top">
-                <img src="./images/top2.jpg" class="flexible-images">
-            </div>
+            <div class="top"></div>
         </header>
         <main>
         <section id="skills">
             <h2 class="text-center">テキスト</h2>
             <div class="container">
               <div class="box">
-                <center>
                 <div class="box-title">タイトル</div>
-                <p>テキスト1</p></center>
+                <p>テキスト1</p>
               </div>
               <div class="box">
-                <center>
                 <div class="box-title">タイトル</div>
-                <p>テキスト２</p></center>
+                <p>テキスト２</p>
             　</div>
               <div class="box">
-                <center>
                 <div class="box-title">タイトル</div>
-                <p>テキスト３</p></center>
+                <p>テキスト３</p>
               </div>
             </div>
         </section>
@@ -41,7 +36,7 @@
         <section id="contact">
             <h2 class="text-center">テキスト</h2>
             <ul>
-                <li><a href="#"><font color="#fff">botton</font></i></a></li>
+                <li><a href="#">botton</a></li>
             </ul>
         </section>
     </footer>
